# Aplikasi_Ai_Video_Tiktok_Clip

./: .env.example  .gitignore  .npmrc  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/audit/: audit.service.ts
apps/api/src/auth/: auth.guard.ts  auth.service.ts  current-user.decorator.ts
apps/api/src/common/: zod-validation.pipe.ts
apps/api/src/config/: env.ts
apps/api/src/health/: health.controller.ts
apps/api/src/jobs/: jobs.controller.ts  jobs.module.ts
apps/api/src/me/: me.controller.ts
apps/api/src/prisma/: prisma.service.ts
apps/api/src/queue/: queue.module.ts
apps/api/src/storage/: magic-bytes.ts  storage.service.ts
apps/api/src/upload/: upload.controller.ts  upload.module.ts
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: auth.config.ts  auth.ts  env.ts  middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: actions.ts  login-form.tsx  page.tsx
apps/web/src/app/(auth)/verify-request/: page.tsx
apps/web/src/app/(dashboard)/dashboard/: page.tsx
apps/web/src/lib/: api.ts  rate-limit.ts  redis.ts
apps/worker/: .dockerignore  Dockerfile  package.json  pyproject.toml
apps/worker/src/: celery_app.py  main.py  settings.py  tasks.py
apps/worker/tests/: test_health.py
docs/: AI_PIPELINE.md  ARCHITECTURE.md  PRD.md  ROADMAP.md  SECURITY.md
(+4 files in other folders)
