[project]
name = "tiktok-clip-worker"
version = "0.0.0"
description = "AI video clipping worker — Whisper + Groq + FFmpeg"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "httpx>=0.28.1",
    "faster-whisper>=1.1.0",
    "groq>=0.15.0",
    "yt-dlp>=2024.12.23",
    "opencv-python-headless>=4.10.0.84",
    "mediapipe>=0.10.20",
    "boto3>=1.35.92",
    "structlog>=24.4.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4",
    "mypy>=1.14.1",
    "types-requests>=2.32.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "A"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
